welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: not found: value Mathmax
    return Mathmax(a,b);
           ^max1020:8: error: type mismatch;
 found   : Unit
 required: Int
  if ((a <= 10 && a >= 20) || (b <= 10 && b >= 20))
  ^